Able to resize images, and align, need to border and fix gaps

--- a/style.css
+++ b/style.css
@@ -81,16 +81,30 @@ a {
     flex-direction: column;
     align-items: center;
 }
+.container-two img {
+    padding: 30px;
+    width: 150px;
+    height: 100px;
+    margin: 0px;
+}
+
+.container-two p {
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: 0;
+}
 .hero2 {
     color: #1F2937;
     font-size: 36px;
     font-weight: extra-bold;
+    padding: 30px;
 }
 
 .photos-descriptions {
     display: flex;
-    width: 60px;
+    width: 40px;
     justify-content: center;
+    text-align: center;
 }
 
 .container-three {
